--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
 <span class="subtitle">Yuhao</span>
 </h1>
 
-<div id="outline-container-org28f9dac" class="outline-2">
-<h2 id="org28f9dac">Intro</h2>
-<div class="outline-text-2" id="text-org28f9dac">
+<div id="outline-container-org03509a5" class="outline-2">
+<h2 id="org03509a5">Intro</h2>
+<div class="outline-text-2" id="text-org03509a5">
 <ul class="org-ul">
 <li>Check the concept summary in the book for the chapter</li>
 <li>Take a look through the math without thinking what the variables represent</li>
@@ -243,13 +243,13 @@
 </div>
 </div>
 
-<div id="outline-container-orge813d20" class="outline-2">
-<h2 id="orge813d20">Concepts</h2>
-<div class="outline-text-2" id="text-orge813d20">
+<div id="outline-container-orgfe7d454" class="outline-2">
+<h2 id="orgfe7d454">Concepts</h2>
+<div class="outline-text-2" id="text-orgfe7d454">
 </div>
-<div id="outline-container-orgfe15cac" class="outline-3">
-<h3 id="orgfe15cac">Density</h3>
-<div class="outline-text-3" id="text-orgfe15cac">
+<div id="outline-container-org26809b2" class="outline-3">
+<h3 id="org26809b2">Density</h3>
+<div class="outline-text-3" id="text-org26809b2">
 <ul class="org-ul">
 <li><p>
 Expression
@@ -277,9 +277,9 @@ Expression
 </div>
 
 
-<div id="outline-container-org0b09543" class="outline-3">
-<h3 id="org0b09543">Pressure</h3>
-<div class="outline-text-3" id="text-org0b09543">
+<div id="outline-container-orgd91a026" class="outline-3">
+<h3 id="orgd91a026">Pressure</h3>
+<div class="outline-text-3" id="text-orgd91a026">
 <ul class="org-ul">
 <li><p>
 Expression
@@ -305,9 +305,9 @@ P = \frac{F}{A}
 </div>
 
 
-<div id="outline-container-orgf6b6a9e" class="outline-3">
-<h3 id="orgf6b6a9e">Pressure in fluids</h3>
-<div class="outline-text-3" id="text-orgf6b6a9e">
+<div id="outline-container-orga6ad587" class="outline-3">
+<h3 id="orga6ad587">Pressure in fluids</h3>
+<div class="outline-text-3" id="text-orga6ad587">
 <ul class="org-ul">
 <li>How to define a pressure in fluids that makes sense?</li>
 <li>First we carve out an imaginative area in a fluid</li>
@@ -318,9 +318,9 @@ P = \frac{F}{A}
 </div>
 
 
-<div id="outline-container-orgf8cf75d" class="outline-3">
-<h3 id="orgf8cf75d">Calculating the pressure in a fluid at a certain depth</h3>
-<div class="outline-text-3" id="text-orgf8cf75d">
+<div id="outline-container-org15c972e" class="outline-3">
+<h3 id="org15c972e">Calculating the pressure in a fluid at a certain depth</h3>
+<div class="outline-text-3" id="text-org15c972e">
 <ul class="org-ul">
 <li>Show on the board</li>
 <li>Imagine drawing a thin rectangular block in a fluid</li>
@@ -334,9 +334,9 @@ P = P_{air} + \rho g h
 </ul>
 </div>
 
-<div id="outline-container-org78aa0be" class="outline-4">
-<h4 id="org78aa0be">Archimedes' principle: application of the pressure in a fluid at a certain depth</h4>
-<div class="outline-text-4" id="text-org78aa0be">
+<div id="outline-container-orgcffe378" class="outline-4">
+<h4 id="orgcffe378">Archimedes' principle: application of the pressure in a fluid at a certain depth</h4>
+<div class="outline-text-4" id="text-orgcffe378">
 <ul class="org-ul">
 <li>The Archimedes' principle is regarding the buoyancy force</li>
 <li>The buoyancy force is from the pressure difference between upper and lower surfaces of an object</li>
@@ -345,7 +345,7 @@ The pressure at a certain point of the surface of an object is higher when it is
 </p></li>
 </ul>
 
-<div id="org454989e" class="figure">
+<div id="org50855c2" class="figure">
 <p><img src="./figures/20231031_phys115_fluids/buoyancy_force_illustration.png" alt="buoyancy_force_illustration.png" />
 </p>
 </div>
@@ -364,16 +364,16 @@ F_B = W_{\mathrm{fluid}}
 
 
 
-<div id="org84f0191" class="figure">
+<div id="orgaf0bca0" class="figure">
 <p><img src="./figures/20231031_phys115_fluids/displaced_fluid.png" alt="displaced_fluid.png" width="50%" />
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org8a5d529" class="outline-4">
-<h4 id="org8a5d529">What about the pressure in other directions?</h4>
-<div class="outline-text-4" id="text-org8a5d529">
+<div id="outline-container-orgbe5c50d" class="outline-4">
+<h4 id="orgbe5c50d">What about the pressure in other directions?</h4>
+<div class="outline-text-4" id="text-orgbe5c50d">
 <ul class="org-ul">
 <li>Assume the pressure at a certain place in a fluid is the same in any directions</li>
 <li>Further we assume the Pascal's principle, which states that change in the pressure applied to an enclosed fluid is transmitted to all parts of the fluid and the walls.</li>
@@ -383,11 +383,11 @@ F_B = W_{\mathrm{fluid}}
 </div>
 </div>
 
-<div id="outline-container-org3748e28" class="outline-3">
-<h3 id="org3748e28">The example of a hydraulic car lift</h3>
-<div class="outline-text-3" id="text-org3748e28">
+<div id="outline-container-org3103575" class="outline-3">
+<h3 id="org3103575">The example of a hydraulic car lift</h3>
+<div class="outline-text-3" id="text-org3103575">
 
-<div id="orgc4c2ccf" class="figure">
+<div id="orga410db9" class="figure">
 <p><img src="./figures/20231031_phys115_fluids/Hydraulic_car_lift.png" alt="Hydraulic_car_lift.png" width="70%" />
 </p>
 </div>
@@ -415,17 +415,17 @@ A_2 = \pi r_2^2
 <li>Suppose nobody applies \(F_1\) to push \(A_1\) yet</li>
 <li>Suppose the weight of the car is 1000\(~kg\)</li>
 <li><p>
-What is \(h_0\)?
+What is \(h\)?
 </p>
 
 \begin{equation*}
-\rho g h_0 = \frac{F_2}{A_2}
+\rho g h = \frac{F_2}{A_2}
 \end{equation*}</li>
 </ul>
 
 
 \begin{equation*}
-h_0 = \frac{F_2}{\rho g A_2}
+h = \frac{F_2}{\rho g A_2}
 \end{equation*}
 
 <ul class="org-ul">
@@ -459,9 +459,9 @@ F_1 = F_2\frac{A_1}{A_2}
 </div>
 </div>
 
-<div id="outline-container-org82a166b" class="outline-3">
-<h3 id="org82a166b">The continuity equation and the Bernoulli's equation</h3>
-<div class="outline-text-3" id="text-org82a166b">
+<div id="outline-container-orgf8b1edd" class="outline-3">
+<h3 id="orgf8b1edd">The continuity equation and the Bernoulli's equation</h3>
+<div class="outline-text-3" id="text-orgf8b1edd">
 <ul class="org-ul">
 <li>Continuity equation is from mass conservation</li>
 <li>Bernoulli's equation is from energy conservation</li>
@@ -470,9 +470,9 @@ F_1 = F_2\frac{A_1}{A_2}
 <li>The former is called Euler approach. The latter is called the Lagrange approach</li>
 </ul>
 </div>
-<div id="outline-container-orgc5be34e" class="outline-4">
-<h4 id="orgc5be34e">Continuity equation</h4>
-<div class="outline-text-4" id="text-orgc5be34e">
+<div id="outline-container-orgb60b99f" class="outline-4">
+<h4 id="orgb60b99f">Continuity equation</h4>
+<div class="outline-text-4" id="text-orgb60b99f">
 <ul class="org-ul">
 <li>Based on mass conservation</li>
 <li>Focus on a fixed volume</li>
@@ -491,9 +491,9 @@ A_1 v_1 = A_2 v_2
 </ul>
 </div>
 </div>
-<div id="outline-container-org388701e" class="outline-4">
-<h4 id="org388701e">Bernoulli's equation: an application of the continuity equation and energy conservation</h4>
-<div class="outline-text-4" id="text-org388701e">
+<div id="outline-container-org1dcb79e" class="outline-4">
+<h4 id="org1dcb79e">Bernoulli's equation: an application of the continuity equation and energy conservation</h4>
+<div class="outline-text-4" id="text-org1dcb79e">
 <ul class="org-ul">
 <li>Assuming steady flow</li>
 <li>Continuity equation, mass conservation</li>
@@ -507,9 +507,12 @@ Demonstrate on board
 \end{equation*}
 
 \begin{equation*}
-P_1 A_1 v_1 \Delta t + \frac{1}{2} v_1^2 \rho A_1 v_1 \Delta t + \rho g y_1 A_1 v_1 \Delta t = P_1 A_1 v_1 \Delta t + \frac{1}{2} v_1^2 \rho A_1 v_1 \Delta t + \rho g y_1 A_1 v_1 \Delta t
-\end{equation*}
+P_1 A_1 v_1 \Delta t + \frac{1}{2} v_1^2 \rho A_1 v_1 \Delta t + \rho g y_1 A_1 v_1 \Delta t = P_2 A_2 v_2 \Delta t + \frac{1}{2} v_2^2 \rho A_2 v_2 \Delta t + \rho g y_2 A_2 v_2 \Delta t
+\end{equation*}</li>
 
+<li><p>
+Use the continuity equation
+</p>
 \begin{equation*}
 P_1 + \frac{1}{2} \rho  v_1^2  + \rho g y_1 = P_2 + \frac{1}{2} \rho  v_2^2  + \rho g y_2
 \end{equation*}</li>
@@ -519,9 +522,9 @@ P_1 + \frac{1}{2} \rho  v_1^2  + \rho g y_1 = P_2 + \frac{1}{2} \rho  v_2^2  + \
 </div>
 
 
-<div id="outline-container-org7947b19" class="outline-3">
-<h3 id="org7947b19">Example: A leaking hydraulic car lift</h3>
-<div class="outline-text-3" id="text-org7947b19">
+<div id="outline-container-orgbe1f12a" class="outline-3">
+<h3 id="orgbe1f12a">Example: A leaking hydraulic car lift</h3>
+<div class="outline-text-3" id="text-orgbe1f12a">
 <ul class="org-ul">
 <li>Imagine the branch leading to the piston at \(A_1\) is cut off at the connection to chamber 2.</li>
 
@@ -531,7 +534,7 @@ P_1 + \frac{1}{2} \rho  v_1^2  + \rho g y_1 = P_2 + \frac{1}{2} \rho  v_2^2  + \
 
 <li>Question: How fast would the fluid leak?</li>
 
-<li>Use the continuity equation and Bernoulli's equation we can calculate the flow rate at the leak</li>
+<li>Use the continuity equation and Bernoulli's equation. We can calculate the flow rate at the leak</li>
 <li><p>
 Draw illustration and derive on board
 </p>
@@ -546,7 +549,7 @@ P_1 + \frac{1}{2} \rho  v_1^2  + \rho g y_1 = P_2 + \frac{1}{2} \rho  v_2^2  + \
 <li>Say, we want to find \(v_1\)</li>
 
 <li><p>
-Find the expression of \(v_2\) from the continuity equation
+Find the expression of \(v_2\) in terms of \(v_1\) from the continuity equation
 </p>
 
 \begin{equation*}
@@ -625,11 +628,11 @@ v_1 = \sqrt{\frac{\frac{2 W_{\mathrm{car}}}{A_2} + 2 \rho g h_2}{\rho \left(1 - 
 </div>
 
 
-<div id="outline-container-org30738b3" class="outline-3">
-<h3 id="org30738b3">Flow around an air foil: the example of Bernoulli's principle that we couldn't miss</h3>
-<div class="outline-text-3" id="text-org30738b3">
+<div id="outline-container-orgbf67676" class="outline-3">
+<h3 id="orgbf67676">Flow around an air foil: the example of Bernoulli's principle that we couldn't miss</h3>
+<div class="outline-text-3" id="text-orgbf67676">
 
-<div id="orge3a073c" class="figure">
+<div id="orgccdef9e" class="figure">
 <p><img src="./figures/20231031_phys115_fluids/flow_around_airfoil.png" alt="flow_around_airfoil.png" width="50%" />
 </p>
 </div>
@@ -686,14 +689,14 @@ Source:  <a href="https://www.av8n.com/irro/profilo1a_e.html">https://www.av8n.c
 </div>
 </div>
 
-<div id="outline-container-orgdf0cb05" class="outline-2">
-<h2 id="orgdf0cb05">Acknowledgment</h2>
-<div class="outline-text-2" id="text-orgdf0cb05">
+<div id="outline-container-orga1ad242" class="outline-2">
+<h2 id="orga1ad242">Acknowledgment</h2>
+<div class="outline-text-2" id="text-orga1ad242">
 <p>
 <i><b>Thanks for your attention</b></i>
 </p>
 
-<div id="org33197d8" class="figure">
+<div id="orga31fc9d" class="figure">
 <p><img src="./figures//20231031_phys115_fluids/thank-you-message-plane-smoke.png" alt="thank-you-message-plane-smoke.png" width="70%" />
 </p>
 </div>
@@ -702,3 +705,4 @@ Source:  <a href="https://www.av8n.com/irro/profilo1a_e.html">https://www.av8n.c
 </div>
 </body>
 </html>
+
